remove settings and add release workflow

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-/*
+.typst-block {
+  display: block;
+  margin: 0 auto;
+}
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
+.typst-block-parent {
+  padding: 1em 0;
+}
