Simplify by intercepting mathjax instead, so it works in both preview and the html mode

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
-.typst-block {
-  display: block;
-  margin: 0 auto;
-}
-
 .typst-block-parent {
   padding: 1em 0;
+  margin: 0;
+  display: block;
+  text-align: center;
+  line-height: 1;
 }
